# doLateX

./: .coverage  pyproject.toml
dolatex/: __init__.py  cli.py  converter.py  format.py  template.py  web.py
dolatex/readers/: __init__.py  base.py  docx_reader.py  markdown_reader.py  pdf_reader.py
dolatex/static/: style.css
dolatex/templates/: index.html
dolatex/templates/latex/: base.tpl  skripsi-filkom.tpl
tests/: __init__.py  test_cli.py  test_converter.py  test_readers.py  test_web.py
